--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@capacitor/core": "1.5.0",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/core": "^5.21.4",
+    "@ionic-native/splash-screen": "^5.21.4",
+    "@ionic-native/status-bar": "^5.21.4",
     "@ionic/angular": "^4.7.1",
+    "chartjs-plugin-zoom": "^0.7.5",
     "core-js": "^2.5.4",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
